# foobard

./: LICENSE  Makefile  README.md  foobard.c
foo_mpris/: Makefile
foo_mpris/libPPUI/: CMakeLists.txt  libPPUI.vcxproj
foo_mpris/pfc/: CMakeLists.txt  pfc.vcxproj
foo_mpris/src/: defines.hpp  main.cpp  socket.cpp  socket.hpp
ubjson/: create.c  parse.c  read.c  render.c  ubjson.h
